[gd_scene load_steps=12 format=3 uid="uid://b30jctsmhp03m"]

[ext_resource type="Script" path="res://scripts/desktop.gd" id="1_er28i"]
[ext_resource type="Texture2D" uid="uid://bj1fruxsfqu60" path="res://pc_images/desktop/wall_smol.jpg" id="1_fsma8"]
[ext_resource type="Texture2D" uid="uid://dkxfnjovkoffn" path="res://pc_images/desktop/bar.jpg" id="2_r7esy"]
[ext_resource type="Texture2D" uid="uid://c0prag83l0gl7" path="res://pc_images/desktop/start_def.jpg" id="3_q86e0"]
[ext_resource type="Texture2D" uid="uid://mrc5yo7oj2jh" path="res://pc_images/desktop/start_act.jpg" id="4_50oco"]
[ext_resource type="Texture2D" uid="uid://vn3uxytd5fhi" path="res://pc_images/desktop/chrome.png" id="6_83n4s"]
[ext_resource type="Texture2D" uid="uid://cv5tt3twawx2t" path="res://pc_images/desktop/chrome_act.png" id="7_stwc0"]
[ext_resource type="Texture2D" uid="uid://bixvrgocqivey" path="res://pc_images/desktop/vs.png" id="8_egvgu"]
[ext_resource type="Texture2D" uid="uid://bvtaxmfwury05" path="res://pc_images/desktop/vs_act.png" id="9_kmss2"]
[ext_resource type="VideoStream" path="res://pc_images/load-.ogv" id="10_jw43b"]
[ext_resource type="AudioStream" uid="uid://0dmri5n1n3d5" path="res://pc_images/WindowsXPLoad.mp3" id="11_5ru1w"]

[node name="Desktop" type="Node2D"]
script = ExtResource("1_er28i")

[node name="WallSmol" type="Sprite2D" parent="."]
position = Vector2(408, 440)
scale = Vector2(3, 3)
texture = ExtResource("1_fsma8")

[node name="Bar" type="Sprite2D" parent="."]
position = Vector2(323.85, 835.35)
scale = Vector2(1.489, 1.489)
texture = ExtResource("2_r7esy")

[node name="Start" type="TextureButton" parent="."]
offset_top = 822.8
offset_right = 96.0
offset_bottom = 846.8
scale = Vector2(1.018, 1.05)
texture_normal = ExtResource("3_q86e0")
texture_pressed = ExtResource("4_50oco")
texture_hover = ExtResource("4_50oco")
texture_disabled = ExtResource("3_q86e0")
texture_focused = ExtResource("4_50oco")
stretch_mode = 0

[node name="Time" type="Label" parent="."]
offset_left = 584.0
offset_top = 824.0
offset_right = 625.0
offset_bottom = 847.0
text = "00:00"

[node name="Chrome" type="TextureButton" parent="."]
offset_left = 101.0
offset_top = 823.0
offset_right = 286.0
offset_bottom = 848.0
texture_normal = ExtResource("6_83n4s")
texture_pressed = ExtResource("7_stwc0")
texture_hover = ExtResource("7_stwc0")
texture_disabled = ExtResource("6_83n4s")
texture_focused = ExtResource("7_stwc0")
ignore_texture_size = true
stretch_mode = 0

[node name="Vs" type="TextureButton" parent="."]
offset_left = 288.0
offset_top = 823.0
offset_right = 473.0
offset_bottom = 848.0
texture_normal = ExtResource("8_egvgu")
texture_pressed = ExtResource("9_kmss2")
texture_hover = ExtResource("9_kmss2")
texture_disabled = ExtResource("8_egvgu")
texture_focused = ExtResource("9_kmss2")
ignore_texture_size = true
stretch_mode = 0

[node name="WinLoad" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Black" type="ColorRect" parent="WinLoad"]
layout_mode = 0
offset_left = -12.0
offset_top = -10.0
offset_right = 28.0
offset_bottom = 30.0
scale = Vector2(16.9666, 21.8298)
color = Color(0, 0, 0, 1)

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="WinLoad"]
layout_mode = 0
offset_left = 5.0
offset_top = 260.0
offset_right = 645.0
offset_bottom = 628.0
stream = ExtResource("10_jw43b")
autoplay = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_5ru1w")

[connection signal="button_down" from="Start" to="." method="_on_start_button_down"]
[connection signal="button_down" from="Chrome" to="." method="_on_chrome_button_down"]
[connection signal="button_down" from="Vs" to="." method="_on_vs_button_down"]
[connection signal="finished" from="WinLoad/VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
